# dtmf-encoder

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dtmf.rs  main.rs  open.rs
src/components/: Button.vue  Keyboard.vue  Run.vue
