[package]
name = "dtmf"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-write-file", "dialog-save", "shell-open"] }
serde = { version = "1", features = ["derive"] }
hound = "3.0"
dasp = { version = "0.11.0", features = ["signal"] }
anyhow = "1.0.83"
tempfile = "3.10.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
