[package]
name = "dtmf"
version = "0.0.2"
description = "A dtmf encoder"
authors = ["YouXam <youxam@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
hound = "3.0"
dasp = { version = "0.11.0", features = ["signal"] }
anyhow = "1.0.83"
tempfile = "3.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
